--- a/Game/backend/package.json
+++ b/Game/backend/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon server.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "jsx"
   },
   "keywords": [],
   "author": "",
@@ -17,5 +18,10 @@
     "mongoose": "^8.1.0",
     "nodemon": "^3.0.3",
     "serverless-http": "^3.2.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.24.1",
+    "@babel/core": "^7.24.1",
+    "@babel/preset-env": "^7.24.1"
   }
 }
