--- a/Game/backend/package.json
+++ b/Game/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon server.js",
     "start": "node server.js",
-    "build": "jsx"
+    "build": "tsx"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@babel/cli": "^7.24.1",
     "@babel/core": "^7.24.1",
-    "@babel/preset-env": "^7.24.1"
+    "@babel/preset-env": "^7.24.1",
+    "react-jsx": "^1.0.0"
   }
 }
